[package]
name = "mqtt"
version = "0.1.0"
edition = "2021"

[features]
strict = []

[dependencies]
backoff = "0.4.0"
bit_field = "0.10.1"
bytes = "1.2.1"
futures = "0.3.24"
thiserror = "1.0.37"
tokio = { version = "1.21.1", features = ["io-util", "macros", "net", "time"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = "0.1.36"
